<resources>
    <string name="app_name">Ads</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Ejemplos de Publicidad</string>
    <string name="start_level">Android</string>
    <string name="banner">Publicidad Pendón</string>
    <string name="interstitial">Publicidad Intersticial</string>
    <string name="video">Publicidad Video</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>
